<resources>
    <string name="app_name">Scaner Cuscocode</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_menu_superior">configuracion</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="menu_configuracion">Configuracion</string>
    <string name="menu_venta">Scan. Mul/Venta</string>
    <string name="menu_registro">Scanner / Reg.</string>
    <string name="menu_hacerca">Instrucciones</string>
    <string name="btn_scanner">ABRIR SCANNER</string>
    <string name="tv_codigo">Esperando...</string>
    <string name="tv_titulo">SCANNER DE CODIGO</string>
    <string name="nombre_app">Scanner De Codigo</string>
    <string name="tv_configuracion1">Configuracion Del </string>
    <string name="tv_configuracion2"> Scanner</string>
    <string name="tv_ip_servidor"> Ip Del Servidor:</string>
    <string name="tv_puerto"> Puerto De Conexion:</string>
    <string name="txt_ip">192.168.1.20</string>
    <string name="txt_puerto">8000</string>
    <string name="btn_actualizar">ACTUALIZAR</string>
    <string name="tv_pagina"><a href="https://cuscocode.com/">cuscocode.com</a></string>
    <string name="tv_agencia">Agencia de desarrollo web y marketing digital</string>
    <string name="tv_appversion">scanner de codigo  V1.0</string>
    <string name="tv_desarrollador">desarrollado por:</string>
    <string name="tv_nombre_desarrollador">Raul Gabriel Hacho Cutipa</string>
    <string name="tv_info_puerto">Para Evitar Problemas Con La Conexion Habilite el Puerto Ingresado En El Firewall del Servidor </string>


    <string name="tv_numero_cel">telefono:<a href="tel:+51940500006">+51940500006</a> solo para negocios</string>
    <string name="tv_pais">cusco-peru</string>
    <string name="tv_estado">servidor:</string>
    <string name="tv_modelo">Dispositivo:</string>
    <string name="switch_opcion">escanner continuo</string>
    <string name="tv_titulo_registro">Escanea tus poductos para realizar un registro</string>
    <string name="tv_titulo_venta">Escanea los productos que deseas vender</string>
    <string name="tv_info_btn_config">Escanear configuracion</string>
    <string name="txt_chat">Ingrese un texto</string>

    <string name="tv_carga">conectando con el servidor</string>
    <string name="tv_error_conec">al parecer el servidor se encuentra inactivo. enciendalo por favor</string>
    <string name="btn_ignorar">ignorar</string>



    <string name="tv_instalacion">Como Conectar la aplicacion movil con el servidor</string>
    <string name="tv_intalacion1">1. <a href="https://cuscocode.com/">Descarga </a>el sotware de escritorio. </string>
    <string name="tv_intalacion2">2. Instala e inicia el programa instalado. </string>
    <string name="tv_intalacion3">3. habilita el puerto establecido atravez del firewall o desactiva el firewall.</string>
    <string name="tv_intalacion4">4. Conecta ambos dispositivos a la misma red. (conecta ambos dispositivos al mismo wifi)</string>
    <string name="tv_intalacion5">5. Escanea la configuracion o ingresa la ip o puerto de forma manual.</string>
    <string name="tv_intalacion6">6. Listo ahora podras usar tu celular como un scanner de codigo inalambrico!!</string>

    <string name="tv_intalacion_video"> <a href="https://cuscocode.com/">Ver video. </a></string>
    <string name="tv_intalacion_descarga_githup">githup</string>
    <string name="btn_aceptar">aceptar</string>




    <string name="tv_intalacion_recomentacion">Es importante no usar algun tipo de vpn u servidores proxy.</string>
    <string name="tv_intalacion_recomentacion1">si la aplicacion muestra algun tipo de error no dudes en notificarlo para una previa solucion.</string>
    <string name="tv_intalacion_recomentacion2">Esta aplicacion es gratuita si te vendieron te estafaron.</string>
    <string name="tv_intalacion_recomentacion3">El scanner o app no nesesita de interner para el funcionamiento.</string>
    <string name="tv_intalacion_recomentacion4">Si desea obtener u conocer nuestros sistemas visite la pagina <a href="https://cuscocode.com/">cuscocode.com</a></string>
</resources>