<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical|center_horizontal|center"
    android:background="@color/zxing_transparent"
    android:foregroundGravity="center_vertical|center_horizontal">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/zxing_transparent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:background="@drawable/ic_fondo_config_dialog"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingTop="50dp"
            android:paddingRight="30dp"
            android:paddingBottom="50dp">


            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:text="@string/tv_instalacion"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:id="@+id/tv_descarga_dialog"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:clickable="true"
                android:fontFamily="sans-serif-black"
                android:gravity="left"
                android:text="@string/tv_intalacion1"
                android:textColor="@color/color_subtexto"
                android:textColorLink="@color/color_rosa"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:gravity="center|left"
                android:text="@string/tv_intalacion2"
                android:textColor="@color/color_subtexto"
                android:textSize="16dp"
                android:layout_marginTop="5dp"/>
            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:gravity="center|left"
                android:text="@string/tv_intalacion3"
                android:textColor="@color/color_subtexto"
                android:textSize="16dp"
                android:layout_marginTop="5dp"/>
            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:gravity="center|left"
                android:text="@string/tv_intalacion4"
                android:textColor="@color/color_subtexto"
                android:textSize="16dp"
                android:layout_marginTop="5dp"/>
            <TextView
                android:id="@+id/textVie10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:gravity="center|left"
                android:text="@string/tv_intalacion5"
                android:textColor="@color/color_subtexto"
                android:textSize="16dp"
                android:layout_marginTop="5dp"/>
            <TextView
                android:id="@+id/textVie11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:gravity="center|left"
                android:text="@string/tv_intalacion6"
                android:textColor="@color/color_subtexto"
                android:textSize="16dp"
                android:layout_marginTop="5dp"/>


            <TextView
                android:id="@+id/tv_video_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:clickable="true"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:text="@string/tv_intalacion_video"
                android:textColor="@color/color_rosa"
                android:textColorLink="@color/color_rosa"
                android:textSize="18dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_aceptar_dialogo_instrucciones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                android:text="@string/btn_aceptar"
                android:textSize="25sp"
                android:textStyle="bold"
                android:background="@drawable/ic_boton_stilo"
                android:textColor="@color/white"/>
        </LinearLayout>


        
    </ScrollView>


</FrameLayout>