<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical|center_horizontal"
    android:background="@color/zxing_transparent"
    android:foregroundGravity="center_vertical|center_horizontal">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/zxing_transparent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/ic_fondo_config_dialog"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="50dp"
            android:paddingBottom="50dp"
            android:paddingRight="30dp"
            android:paddingLeft="30dp">


            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:text="@string/tv_configuracion1"
                android:textColor="@color/color_rosa"
                android:textSize="30dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:text="@string/tv_configuracion2"
                android:textColor="@color/color_rosa"
                android:textSize="30dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_infouuu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/tv_info_btn_config"
                android:textColor="@color/color_subtexto"
                android:textSize="10dp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/img_buton_dialogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_btn_scanner_confi"
                android:padding="2dp"
                android:src="@drawable/scann"
                android:tint="#FFFFFF" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/tv_ip_servidor"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txt_ipservidor_dialogo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_fondo_txt"
                android:digits="0123456789."
                android:ems="10"
                android:hint="@string/txt_ip"
                android:inputType="number|numberDecimal"
                android:padding="10dp"
                android:textColorHighlight="#E91E63"
                android:textColorLink="#E91E63"
                android:textCursorDrawable="@color/color_rosa"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="left"
                android:text="@string/tv_puerto"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txt_puertoconexion_dialogo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_fondo_txt"
                android:ems="10"
                android:hint="@string/txt_puerto"
                android:inputType="number"
                android:padding="10dp"
                android:textColorHighlight="#E91E63"
                android:textColorLink="#E91E63"
                android:textCursorDrawable="@color/color_rosa"
                android:textSize="25dp" />


            <Button
                android:id="@+id/btn_actualizar_dialogo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                android:text="@string/btn_actualizar"
                android:textSize="27sp"
                android:textStyle="bold"
                android:background="@drawable/ic_boton_stilo"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/tv_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/tv_info_puerto"
                android:textColor="@color/color_subtexto"
                android:textSize="12dp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/buton_dialogo_ayuda_config"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_btn_scanner_confi"
                android:src="@drawable/ic_hacerca"
                android:tint="#FFFFFF"
                android:layout_margin="20dp"/>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>